2015-11-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37164: Completion/Unix/Command/_tmux: _tmux: Complete external
	commands

	* 37149: Completion/Unix/Command/_git: _git: Complete
	'bisect/bad' ref

2015-11-19  Peter Stephenson  <p.stephenson@samsung.com>

	* 37159: NEWS, README: update for next version.

	* unposted: Doc/Zsh/params.yo: describe separators between
	values in array assignment.

2015-11-18  Barton E. Schaefer  <schaefer@zsh.org>

	* 37145: Src/lex.c: suppress alias expansion in skipcomm() to
	defer parsing aliases in $(...) et al. into the subshell

2015-11-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 37140: Doc/Zsh/expn.yo: note that <<(...) is < <(...).

2015-11-17  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37129: Completion/Unix/Command/_git: _git: Complete 'commit -p'

2015-11-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 37128: Src/lex.c, Test/D06subscript.ztst: work around alias
	expansion trashing subcript being parsed.

	* 37127 (minor tweak): Doc/Zsh/params.yo: document indexing of
	$signals.

2015-11-16  Mikael Magnusson  <mikachu@gmail.com>

	* Eric Cook: 36986: Functions/Misc/zed: Add -- to the `functions'
	builtin calls

	* Eric Cook: 37050: Completion/BSD/Command/_sockstat: minor improvements

2015-11-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 37119: Doc/Zsh/expn.yo: further "Rules" clarifications

2015-11-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 37115: Completion/Unix/Commmand/_git, Doc/Zsh/expn.yo: update
	for changes in ${(P)...} evaluation.

2015-11-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Zle/zle_tricky.c: Make $EDITOR's
	jump-to-matching-brace happy.

	* 37031: Completion/Unix/Command/_git: _git-merge: Exclude
	ancestors of HEAD from recent commit completion

	* 37025: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Add a cherry-pick patch-format

2015-11-13  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
